sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:13: error: ';' expected but integer literal found.
    }i+=1
        ^